--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         transition: background-color 0.3s ease, color 0.3s ease;
       }
       html.dark body {
-        background-color: #000000;
+        background-color: #0F0F0F;
         color: #ffffff;
       }
       #root {
